# astra

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  20240808_fix_apo1m_mwm_products.py  20240808_snow_white.py  20240815_corv.py  20240820_make_aspcapstar.py  20240830_remove_proprietary_boss.py  20240912_builder.py  20240912_make_products.py  20241028_fix_aspcap_flags.py  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  STYLE.rst  agnostic_errors.py  dr19_copy_aspcap_dr17.py  environment.yml  fake-gpu-task.py  foo.py  hamish.cfg  move_paths.py  pyproject.toml  requirements.txt  requirements_contrib.txt  requirements_dev.txt  requirements_doc.txt  sdss5.cfg  setup.py  snow_white_script.py  some_0.7_thoughts.py  utah.cfg  workflow_example_ferre.py  workflow_example_tc.py  workflow_example_tp.py
.github/workflows/: ci.yml
dags/: main.py
docs/source/: api.md  conf.py  index.md  install.md  tasks.md
docs/source/_templates/: module.rst
docs/source/developer/: airflow-index.md  bundles.md  code.md  dags.md  data-products.md  database.md  index.md  outputs.md  overview.md  parameters.md  sdss.md  software-index.md  structure.md  tasks.md
docs/source/sdss/: dags.md
docs/source/user/: components.md  datamodels.md  index.md  install.md
docs/sphinx/: api.rst  astra-tools.rst  astra-utilities.rst  batch.rst  components.rst  conf.py  data.rst  database.rst  faq.rst  index.rst  install.rst  installation.rst  intro.rst  refs.bib  roadmap.rst  tasks.rst  tools.rst  tutorials.rst
docs/sphinx/tutorials/: apogee-ferre.rst  apogee-thecannon.rst  apogee-thepayne.rst  cannon-boss.rst  ferre_apogee.rst
etc/: astra-test-environment.yml  environment.yml  environment_v0_2_2.yml
papers/01/: main.tex
python/astra/: __init__.py  base.py  components.py  data.py  data_subsets.py  database.py  folders.py  glossary.py  new_operators.py  operators.py  paths.py  products.py  task.py  tasks.py
python/astra/contrib/: __init__.py
python/astra/core/: component.py  exceptions.py  folder.py  subset.py  task.py
python/astra/database/: __init__.py  apogee_drpdb.py  astradb.py  catalogdb.py  sdss5db.py  targetdb.py  utils.py
python/astra/db/: __init__.py  connection.py  database.py
python/astra/etc/: astra.yml
python/astra/hooks/: __init__.py  subprocess.py
python/astra/migrations/: apogee.py  boss.py  catalog.py  misc.py  photometry.py  reddening.py  targeting.py  utils.py
python/astra/models/: __init__.py  anet.py  apogee.py  apogeenet.py  apogeenet_v2.py  aspcap.py  astronn.py  astronn_dist.py  base.py  bnet.py  boss.py  bossnet.py  classifier.py  corv.py  ferre.py  fields.py  glossary.py  grok.py  hot_payne.py  line_forest.py  lineforest.py  madgics.py  mdwarftype.py  mwm.py  nmf_rectify.py  pipeline.py  pipelines.py  slam.py  snow_white.py  source.py  spectrum.py  the_cannon.py  the_payne.py
python/astra/new_database/: __init__.py  astradb.py
python/astra/operators/: __init__.py  apogee_star.py  apogee_visit.py  apstar.py  astra_operator.py  base.py  boss_spec.py  bundle.py  data.py  export.py  meta.py  qc.py  sdss.py  sdss_data_product.py  slurm.py  utils.py
python/astra/products/: apogee.py  boss.py  mwm.py  mwm_summary.py  pipeline.py  pipeline_summary.py  refactor.py  source.py  summary.py  utils.py
python/astra/sdss/: __init__.py  apogee.py  apogee_bitmask.py  catalog.py  datamodels.py  datamodels2.py  ipl2.py  meta.py  tasks.py
schema/astradb/: astra_v02db.sql  astradb.sql
scripts/: vaffoff
src/astra/: __init__.py  fields.py  glossary.py
tests/: test_bossnet_flags.py  test_fields.py  test_models.py  test_task_query_builder.py  test_utils.py
workflows/: create_snr_performance_plots.py  create_summary_tables.py  dr16_apogee_apogeenet.py  dr16_apogee_classifier.py  dr16_apogee_thecannon_custom_training_set.py  dr16_apogee_thecannon_snr_test.py  dr16_apogee_thepayne.py  dr16_boss_wd_classify.py  sdss4_dr16_ferre_m67.py  sdss4_ferre_m67.py  sdss5_apogee_ferre.py  sdss5_create_cannon_training_set_from_sdss4.py  sdss5_daily.py  sdss5_get_daily.py  sdss5_report_missing_files.py  sdss5_tmp.py
(+574 files in other folders)
